#6 LazyLogger should keep the style of SmartLogger when used within anonymous classes